# CrossingTheLine

./: CMakeLists.txt  README.md  TODO.md
cmake/: variables.cmake
res/: resource_list.nbrlist
scripts/: distribute.bat  reload_resources.bat  run_game.bat
src/: app.cpp  dialogue_manager.cpp  dialogue_manager.h  fog_shader.h  game_event.cpp  game_event.h  input_manager.cpp  input_manager.h  level.cpp  level.h  main.cpp  resource_database.cpp  resource_database.h  sound_manager.cpp  sound_manager.h  state_manager.cpp  state_manager.h
src/entities/: entity.cpp  entity.h  entity_manager.cpp  player.cpp  tile.cpp  tile_manager.cpp  vehicle.cpp
src/levels/: level.cpp  level.h  level_manager.cpp  nkdata.cpp  nklvl.cpp
src/states/: credits_state.cpp  lost_state.cpp  menu_state.cpp  state.h  won_state.cpp
src/ui/: ui.h  ui_layout.cpp  ui_text.cpp
